Enable compactionHeuristic in gitconfig
This will use blank lines and stuff to define the diff chunks. Much
cleaner output wenn structures are added (like a function in a sequence
of functions).

--- a/.gitconfig
+++ b/.gitconfig
@@ -13,6 +13,7 @@
     log = true
 [diff]
     renames = copies
+    compactionHeuristic = true
 [diff "bin"]
     textconv = hexdump -v -C
 [rerere]
