Add git alias 'color'
Alias is supposed to force git output coloring when being piped (in my
example into watch). Works quite nice this way. Just use as first git
attribute and concatenate your git command like always afterwards.

examples:
$ watch -n5 -- git color status
$ git color diff

--- a/.gitconfig
+++ b/.gitconfig
@@ -56,6 +56,7 @@
         new = green bold
         whitespace = red reverse
 [alias]
+    color = !git -c color.status=always -c color.ui=always
     fpush = push --force-with-lease
     contributors = shortlog --summary --numbered
     filelog = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat
