--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -1,14 +1,12 @@
 [global_config]
-  enabled_plugins = CustomCommandsMenu,
-  focus = mouse
-  inactive_color_offset = 0.80
-  title_hide_sizetext = True
+  enabled_plugins = ,
 [keybindings]
   broadcast_all = None
   broadcast_group = None
   broadcast_off = None
   close_term = None
   close_window = None
+  copy = <Primary><Shift>c
   cycle_next = None
   cycle_prev = None
   edit_tab_title = None
@@ -24,13 +22,18 @@
   group_tab = None
   help = None
   hide_window = None
+  insert_number = None
+  insert_padded = None
   layout_launcher = None
+  line_down = None
   move_tab_left = None
   move_tab_right = None
   new_tab = None
   new_terminator = None
   new_window = None
+  next_profile = None
   next_tab = None
+  paste = <Primary><Shift>v
   prev_tab = None
   reset = None
   reset_clear = None
@@ -41,9 +44,10 @@
   rotate_ccw = None
   rotate_cw = None
   scaled_zoom = None
-  search = <Primary><Shift>f
+  search = None
   split_horiz = None
   split_vert = None
+  toggle_scrollbar = None
   toggle_zoom = None
   ungroup_all = None
   ungroup_tab = None
@@ -51,7 +55,6 @@
   [[default]]
     [[[child1]]]
       parent = window0
-      profile = default
       type = Terminal
     [[[window0]]]
       parent = ""
@@ -59,9 +62,11 @@
 [plugins]
 [profiles]
   [[default]]
-    background_color = "#002b36"
-    foreground_color = "#839496"
-    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
+    background_color = "#282828"
+    cursor_color = "#aaaaaa"
+    font = UbuntuMono Nerd Font 11
+    foreground_color = "#ebdbb2"
+    palette = "#282828:#cc241d:#98971a:#d79921:#458588:#b16286:#689d6a:#a89984:#928374:#fb4934:#b8bb26:#fabd2f:#83a598:#d3869b:#8ec07c:#ebdbb2"
     scrollback_infinite = True
     scrollbar_position = hidden
     show_titlebar = False
