--- a/.gitconfig
+++ b/.gitconfig
@@ -1,81 +1,60 @@
-[user]
-    name = Simon Schiele
-[github]
-    user = simonschiele
 [core]
     quotepath = off
     editor = vim
     whitespace=-indent-with-non-tab,trailing-space,cr-at-eol,tab-in-indent
-    excludesfile = ~/.gitignore.global
     # pager = diff-highlight | diff-so-fancy | less --tabs=1,5 -R
+[user]
+    name = Simon Schiele
+[github]
+    username = simonschiele
+[merge]
+    tool = vimdiff
+    ff = only
+    # log = true
 [diff]
     tool = vimdiff
     renames = copies
-    algorithm = patience
-    mnemonicPrefix = true
     compactionHeuristic = true
-    conflictStyle = diff3
-    [diff "image"]
-        textconv = identify
-    [diff "bin"]
-        textconv = hexdump -v -C
-[merge]
-    tool = vimdiff
-    conflictStyle = diff3
-    ff = only
-    log = true
+[diff "bin"]
+    textconv = hexdump -v -C
+[rerere]
+    enabled = false
 [status]
-    # submodulesummary = true
+    submodulesummary = false
 [pull]
     ff = only
 [push]
-    # default = current
-    default = tracking
-[transfer]
-    fsckobjects = true
-[fetch]
-    fsckobjects = true
-[receive]
-    fsckObjects = true
-[rerere]
-    enabled = true
+    default = current
 [color]
     ui = auto
     interactive = auto
     branch = auto
     diff = auto
     grep = auto
+    interactive = auto
     showbranch = auto
     status = auto
-    interactive = auto
     pager = true
-    [color "diff"]
-        meta = yellow bold
-        frag = magenta bold
-        old = red bold
-        new = green bold
-        whitespace = red reverse
+[color "diff"]
+    whitespace = red reverse
 [alias]
-    color = !git -c color.status=always -c color.ui=always
     fpush = push --force-with-lease
     contributors = shortlog --summary --numbered
     filelog = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat
     graphviz = "!echo 'digraph git {' ; git log --pretty='format:  %h -> { %p }' \"$@\" | sed 's/[0-9a-f][0-9a-f]*/\"&\"/g' ; echo '}';"
     ignored = ls-files --others -i --exclude-standard
+    lastlog = log --color -n 20 --pretty=tformat:\"%h - %an, %ar : %s\" HEAD^1..HEAD
     lasttag = describe --tags --abbrev=0
     plog = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
     praise = blame
     serve = daemon --base-path=. --export-all --enable=receive-pack --reuseaddr --informative-errors --verbose
     subupdate = submodule update --init --remote --recursive
-    one = show -s --pretty='format:%h (%s)'
-    rlog = !sh -c 'git log --color \"$@\"|fmt -s -w 79|less -FRSX' _
     initdefault = "!git init ; touch .gitignore README.md ; git add .gitignore README.md ; git commit .gitignore README.md -m 'Initial commit'"
+    http2ssh = "!sed -i 's/url.*http.*simonschiele/url = git@github.com:simonschiele/g'"
 [url "git@bitbucket.com:"]
     insteadOf = bb:
-[cola]
-    spellcheck = false
 [include]
-    path = ~/.work/.gitconfig
-    path = ~/.work/gitconfig
     path = ~/.private/.gitconfig
     path = ~/.private/gitconfig
+    path = ~/.work/.gitconfig
+    path = ~/.work/gitconfig
