--- a/.gitmodules
+++ b/.gitmodules
@@ -3,10 +3,7 @@
 	url = https://github.com/simonschiele/dot.vim.git
 [submodule ".config/awesome"]
 	path = .config/awesome
-	url = https://github.com/simonschiele/awesome.git
+	url = https://github.com/simonschiele/dot.awesome.git
 [submodule ".config/i3"]
 	path = .config/i3
 	url = https://github.com/simonschiele/dot.i3
-[submodule ".bin/vils-ng"]
-	path = .bin/vils-ng
-	url = https://github.com/simonschiele/vils-ng.git
