Switch diff heuristic in gitconfig to 'indent'
Embarrassingly I missed that compaction-heuristic got deprecated quite a
while ago :-/

--- a/.gitconfig
+++ b/.gitconfig
@@ -14,7 +14,7 @@
 [diff]
     tool = vimdiff
     renames = copies
-    compactionHeuristic = true
+    indentHeuristic = true
 [diff "bin"]
     textconv = hexdump -v -C
 [rerere]
