Add default user 'pi' for pi-* hosts in ssh config

--- a/.ssh/config
+++ b/.ssh/config
@@ -4,6 +4,9 @@ Host *.dyndns.org *.homeunix.org *.duckdns.org
 Host *.github.com github.com *.bitbucket.org bitbucket.org git.* gitlab.*
     User git
 
+Host pi-*
+    User pi
+
 # 'proxy jumphost hack'
 # usage:
 #   $ ssh <jumphost_username>@<jumphost>+<target> -l <target_username>
